--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header">
+				<!-- <header id="header">
 					<h1 id="logo"><a href="index.html">Landed</a></h1>
 					<nav id="nav">
 						<ul>
@@ -44,7 +44,7 @@
 							<li><a href="#" class="button special">Sign Up</a></li>
 						</ul>
 					</nav>
-				</header>
+				</header> -->
 
 			<!-- Banner -->
 				<section id="banner">
@@ -68,7 +68,7 @@
 								<div class="4u 12u$(medium)">
 									<header>
 										<h2>RunAWay</h2>
-										<p>A full-stack web app built on rails, postgresql, and react/redux.</p>
+										<p>A full-stack web app built on Rails, Postgresql, and React/Redux.</p>
 									</header>
 								</div>
 								<div class="4u 12u$(medium)">
@@ -82,6 +82,9 @@
 									ipsum dolor nullam.</p>
 								</div>
 							</div>
+							<ul class="actions">
+								<li><a href="http://www.runaway.today" target="_blank" class="button">Live</a></li>
+							</ul>
 						</div>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
@@ -97,7 +100,7 @@
 						</header>
 						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="https://ravisraval.github.io/BlingRunner/" target="_blank" class="button">Live</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -108,12 +111,12 @@
 					<span class="image fit main bottom"><img src="images/tellmewhattoeat.gif" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum felis blandit praesent sed augue</h2>
-							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+							<h2>Tell Me What To Eat</h2>
+							<p>A full-stack web app built on Express, Postgresql, and React/Redux.</p>
 						</header>
 						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="https://boiling-waters-62095.herokuapp.com/" target="_blank" class="button">Live</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
@@ -123,8 +126,8 @@
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>Accumsan sed tempus adipiscing blandit</h2>
-							<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+							<h2>Web Development Skills</h2>
+							<p>Something something awesome pants</p>
 						</header>
 						<div class="box alt">
 							<div class="row uniform">
@@ -149,12 +152,12 @@
 									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
 								</section>
 								<section class="4u 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-file"></span>
+									<span class="icon alt major fa-html5"></span>
 									<h3>Odio laoreet accumsan</h3>
 									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
 								</section>
 								<section class="4u$ 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-lock"></span>
+									<span class="icon alt major fa-github"></span>
 									<h3>Massa arcu accumsan</h3>
 									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
 								</section>
