--- a/index.html
+++ b/index.html
@@ -127,39 +127,39 @@
 					<div class="container">
 						<header class="major">
 							<h2>Web Development Skills</h2>
-							<p>Something something awesome pants</p>
+							<!-- <p>Something something awesome pants</p> -->
 						</header>
 						<div class="box alt">
 							<div class="row uniform">
 								<section class="4u 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-area-chart"></span>
-									<h3>Ipsum sed commodo</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<span class="icon alt major fa-code"></span>
+									<h3>React / Redux</h3>
+									<!-- <p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p> -->
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-comment"></span>
-									<h3>Eleifend lorem ornare</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<span class="icon alt major fa-server"></span>
+									<h3>JS / Node.js</h3>
+									<!-- <p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p> -->
 								</section>
 								<section class="4u$ 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-flask"></span>
-									<h3>Cubilia cep lobortis</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<span class="icon alt major fa-diamond"></span>
+									<h3>Ruby / Rails</h3>
+									<!-- <p>Expert proficiency.</p> -->
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-database"></span>
 									<h3>SQL</h3>
-									<p>Significant experience with SQL queries, Rails ActiveRecord, and PostgreSQL.</p>
+									<!-- <p>Significant experience with SQL queries, Rails ActiveRecord, and PostgreSQL.</p> -->
 								</section>
 								<section class="4u 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-html5"></span>
 									<h3>HTML5 & CSS3</h3>
-									<p>Up to date with the latest tools and design cues.</p>
+									<!-- <p>Up to date with the latest tools and design cues.</p> -->
 								</section>
 								<section class="4u$ 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-github"></span>
+									<span class="icon alt major fa-git"></span>
 									<h3>GitHub</h3>
-									<p>Comfortable with solo and group git workflow.</p>
+									<!-- <p>Comfortable with solo and group git workflow.</p> -->
 								</section>
 							</div>
 						</div>
@@ -190,15 +190,12 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.linkedin.com/in/ravi-raval-54a11553/" target="_blank" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/ravisraval/" target="_blank" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="mailto:someone@example.com" target="_blank" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li>
+						<li>Ravi Raval</li>
 					</ul>
 				</footer>
 
