--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 					<div class="content">
 						<header>
 							<h2>Ravi Raval</h2>
-							<p>Non curae est ut consectetur ac auctor morbi.<br />
-							Quam morbi. Arcu at nullam accumsan nulla.</p>
+							<h3>Full-stack Web Developer</h3>
+							<p>Efficient, Driven, and Resourceful Problem Solver</p>
 						</header>
 						<span class="image"><img src="images/portrait.jpg" alt="" /></span>
 					</div>
@@ -74,13 +74,13 @@
 								<div class="4u 12u$(medium)">
 									<p>As a biker, I wanted to create an app that allowed users to create their own running and cycling routes. Delving deeply into the Google Maps API</p>
 								</div>
-								<div class="4u$ 12u$(medium)">
+								<!-- <div class="4u$ 12u$(medium)">
 									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
 									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
 									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
 									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
 									ipsum dolor nullam.</p>
-								</div>
+								</div> -->
 							</div>
 							<ul class="actions">
 								<li><a href="http://www.runaway.today" target="_blank" class="button">Live</a></li>
@@ -98,7 +98,7 @@
 							<h2>BlingRunner</h2>
 							<p>A JavaScript Browser Game</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<!-- <p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p> -->
 						<ul class="actions">
 							<li><a href="https://ravisraval.github.io/BlingRunner/" target="_blank" class="button">Live</a></li>
 						</ul>
@@ -114,7 +114,7 @@
 							<h2>Tell Me What To Eat</h2>
 							<p>A full-stack web app built on Express, Postgresql, and React/Redux.</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<!-- <p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p> -->
 						<ul class="actions">
 							<li><a href="https://boiling-waters-62095.herokuapp.com/" target="_blank" class="button">Live</a></li>
 						</ul>
@@ -163,16 +163,16 @@
 								</section>
 							</div>
 						</div>
-						<footer class="major">
+						<!-- <footer class="major">
 							<ul class="actions">
 								<li><a href="#" class="button">Magna sed feugiat</a></li>
 							</ul>
-						</footer>
+						</footer> -->
 					</div>
 				</section>
 
 			<!-- Five -->
-				<section id="five" class="wrapper style2 special fade">
+				<!-- <section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
 							<h2>Magna faucibus lorem diam</h2>
@@ -185,7 +185,7 @@
 							</div>
 						</form>
 					</div>
-				</section>
+				</section> -->
 
 			<!-- Footer -->
 				<footer id="footer">
