modify links and text

--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Landed by Pixelarity
-	pixelarity.com | hello@pixelarity.com
-	License: pixelarity.com/license
--->
+
 <html>
 	<head>
 		<title>Ravi Raval</title>
@@ -18,33 +14,30 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<!-- <header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
+				<header id="header">
+					<!-- <h1 id="logo"><a href="index.html">Landed</a></h1> -->
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<!-- <li><a href="index.html">Home</a></li> -->
 							<li>
-								<a href="#">Layouts</a>
+								<a href="#">Work</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
-										</ul>
-									</li>
+									<li><a class="scrolly" target="_blank" href="#RunAWay">RunAWay</a></li>
+									<li><a class="scrolly" target="_blank" href="#BlingRunner">Bling Runner</a></li>
+									<li><a class="scrolly" target="_blank" href="#TellMeWhatToEat">Tell Me What To Eat</a></li>
 								</ul>
 							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button special">Sign Up</a></li>
+							<li>
+								<a href="#">Contact</a>
+								<ul>
+									<li><a href="https://github.com/ravisraval/">GitHub</a></li>
+									<li><a href="https://www.linkedin.com/in/ravi-raval-54a11553/">LinkedIn</a></li>
+									<li><a href="mailto:someone@example.com">raviraval@gmail.com</a></li>
+								</ul></li>
+							<!-- <li><a href="#" class="button special">Sign Up</a></li> -->
 						</ul>
 					</nav>
-				</header> -->
+				</header>
 
 			<!-- Banner -->
 				<section id="banner">
@@ -54,13 +47,13 @@
 							<h3>Full-stack Web Developer</h3>
 							<p>Efficient, Driven, and Resourceful Problem Solver</p>
 						</header>
-						<span class="image"><img src="images/portrait.jpg" alt="" /></span>
+						<span class="image"><img src="images/portrait2.jpg" alt="" /></span>
 					</div>
-					<a href="#one" class="goto-next scrolly">Next</a>
+					<a href="#RunAWay" class="goto-next scrolly">Next</a>
 				</section>
 
 			<!-- One -->
-				<section id="one" class="spotlight style1 bottom">
+				<section id="RunAWay" class="spotlight style1 bottom">
 					<span class="image fit main"><img src="images/runaway.gif" alt="" /></span>
 					<div class="content">
 						<div class="container">
@@ -87,11 +80,11 @@
 							</ul>
 						</div>
 					</div>
-					<a href="#two" class="goto-next scrolly">Next</a>
+					<a href="#BlingRunner" class="goto-next scrolly">Next</a>
 				</section>
 
 			<!-- Two -->
-				<section id="two" class="spotlight style2 right">
+				<section id="BlingRunner" class="spotlight style2 right">
 					<span class="image fit main"><img src="images/blingrunner.gif" alt="" /></span>
 					<div class="content">
 						<header>
@@ -103,11 +96,11 @@
 							<li><a href="https://ravisraval.github.io/BlingRunner/" target="_blank" class="button">Live</a></li>
 						</ul>
 					</div>
-					<a href="#three" class="goto-next scrolly">Next</a>
+					<a href="#TellMeWhatToEat" class="goto-next scrolly">Next</a>
 				</section>
 
 			<!-- Three -->
-				<section id="three" class="spotlight style3 left">
+				<section id="TellMeWhatToEat" class="spotlight style3 left">
 					<span class="image fit main bottom"><img src="images/tellmewhattoeat.gif" alt="" /></span>
 					<div class="content">
 						<header>
