--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 									<li><a href="https://www.linkedin.com/in/ravi-raval-54a11553/">LinkedIn</a></li>
 									<li><a href="mailto:someone@example.com">raviraval@gmail.com</a></li>
 								</ul></li>
-							<!-- <li><a href="#" class="button special">Sign Up</a></li> -->
+							<li><a href="#skills" class="button special">Skills</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -112,11 +112,11 @@
 							<li><a href="https://boiling-waters-62095.herokuapp.com/" target="_blank" class="button">Live</a></li>
 						</ul>
 					</div>
-					<a href="#four" class="goto-next scrolly">Next</a>
+					<a href="#skills" class="goto-next scrolly">Next</a>
 				</section>
 
 			<!-- Four -->
-				<section id="four" class="wrapper style1 special fade-up">
+				<section id="skills" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
 							<h2>Web Development Skills</h2>
