--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
 								</section>
 							</div>
 						</div>
-						<!-- <footer class="major">
+						<footer class="major">
 							<ul class="actions">
-								<li><a href="#" class="button">Magna sed feugiat</a></li>
+								<li><a href="images/Ravi Raval Resume.pdf" class="button">Resume</a></li>
 							</ul>
-						</footer> -->
+						</footer>
 					</div>
 				</section>
 
