--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						<ul>
 							<!-- <li><a href="index.html">Home</a></li> -->
 							<li>
-								<a href="#">Work</a>
+								<a href="#">Portfolio</a>
 								<ul>
 									<li><a class="scrolly" target="_blank" href="#RunAWay">RunAWay</a></li>
 									<li><a class="scrolly" target="_blank" href="#BlingRunner">Bling Runner</a></li>
@@ -34,7 +34,8 @@
 									<li><a href="https://www.linkedin.com/in/ravi-raval-54a11553/">LinkedIn</a></li>
 									<li><a href="mailto:someone@example.com">raviraval@gmail.com</a></li>
 								</ul></li>
-							<li><a href="#skills" class="button special">Skills</a></li>
+							<li><a href="#skills" target="_blank" class="scrolly">Skills</a></li>
+							<li><a href="images/Ravi Raval Resume.pdf" class="button special">Resume</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -156,11 +157,11 @@
 								</section>
 							</div>
 						</div>
-						<footer class="major">
+						<!-- <footer class="major">
 							<ul class="actions">
 								<li><a href="images/Ravi Raval Resume.pdf" class="button">Resume</a></li>
 							</ul>
-						</footer>
+						</footer> -->
 					</div>
 				</section>
 
