--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									</header>
 								</div>
 								<div class="4u 12u$(medium)">
-									<p>As a biker, I wanted to create an app that allowed users to create their own running and cycling routes. Delving deeply into the Google Maps API</p>
+									<p>Runners and cyclists can create and save their own exercise routes and using the Google Maps API. Users can also log and view individual workouts.</p>
 								</div>
 								<!-- <div class="4u$ 12u$(medium)">
 									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
@@ -89,10 +89,10 @@
 					<span class="image fit main"><img src="images/blingrunner.gif" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>BlingRunner</h2>
+							<h2>Bling Runner</h2>
 							<p>A JavaScript Browser Game</p>
 						</header>
-						<!-- <p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p> -->
+						<p>Bling Runner crosses the rhythm music game genre with exciting (and increasingly difficult!) arcade-style driving physics.</p>
 						<ul class="actions">
 							<li><a href="https://ravisraval.github.io/BlingRunner/" target="_blank" class="button">Live</a></li>
 						</ul>
@@ -106,9 +106,9 @@
 					<div class="content">
 						<header>
 							<h2>Tell Me What To Eat</h2>
-							<p>A full-stack web app built on Express, Postgresql, and React/Redux.</p>
+							<p>A full-stack web app built on Express, PostgreSQL, and React/Redux.</p>
 						</header>
-						<!-- <p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p> -->
+						<p>Tired of pondering what to eat? This app suggests great restaurants near you and can help narrow down your search via a series of filtering questions.</p>
 						<ul class="actions">
 							<li><a href="https://boiling-waters-62095.herokuapp.com/" target="_blank" class="button">Live</a></li>
 						</ul>
