links open in new tab

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 							<li>
 								<a href="#">Contact</a>
 								<ul>
-									<li><a href="https://github.com/ravisraval/">GitHub</a></li>
-									<li><a href="https://www.linkedin.com/in/ravi-raval-54a11553/">LinkedIn</a></li>
+									<li><a target="_blank" href="https://github.com/ravisraval/">GitHub</a></li>
+									<li><a target="_blank" href="https://www.linkedin.com/in/ravi-raval-54a11553/">LinkedIn</a></li>
 									<li><a href="mailto:someone@example.com">raviraval@gmail.com</a></li>
 								</ul></li>
 							<li><a href="#skills" target="_blank" class="scrolly">Skills</a></li>
-							<li><a href="images/Ravi Raval Resume.pdf" class="button special">Resume</a></li>
+							<li><a target="_blank" href="images/Ravi Raval Resume.pdf" class="button special">Resume</a></li>
 						</ul>
 					</nav>
 				</header>
