--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		gtag('js', new Date());
 		
 		gtag('config', 'UA-106821036-1');
+		console.log(dataLayer);
 	</script>
 		<title>Ravi Raval</title>
 		<meta charset="utf-8" />
@@ -206,13 +207,6 @@
 		</div>
 
 		<!-- Scripts -->
-		<script>
-         window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-         ga('create', 'UA-106821036-1', 'auto');
-         ga('send', 'pageview');
-        </script>
-        <script async src='https://www.google-analytics.com/analytics.js'></script>
-        <!-- End Google Analytics -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
