--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 		gtag('js', new Date());
 		
 		gtag('config', 'UA-106821036-1');
-		console.log(dataLayer);
 	</script>
 		<title>Ravi Raval</title>
 		<meta charset="utf-8" />
@@ -207,14 +206,14 @@
 		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
+			<!-- <script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
+			<script src="assets/js/util.js"></script> -->
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+			<!-- <script src="assets/js/main.js"></script> -->
 
 	</body>
 </html>
