--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments)};
 		gtag('js', new Date());
-		
+
 		gtag('config', 'UA-106821036-1');
 		</script>
 	</head>
@@ -55,7 +55,7 @@
 					<div class="content">
 						<header>
 							<h2>Ravi Raval</h2>
-							<h3>Full-stack Web Developer</h3>
+							<h4>Full-stack Web Developer for <a href='https://www.girlzftw.com/'>Girlz, FTW</a></h4>
 							<p>Efficient, Driven, and Resourceful Problem Solver</p>
 						</header>
 						<span class="image"><img src="images/portrait2.jpg" alt="" /></span>
@@ -217,19 +217,3 @@
 
 	</body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
