update portfolio with recent projects

--- a/index.html
+++ b/index.html
@@ -33,16 +33,17 @@
 								<a href="#">Portfolio</a>
 								<ul>
 									<li><a class="scrolly" target="_blank" href="#RunAWay">RunAWay</a></li>
-									<li><a class="scrolly" target="_blank" href="#BlingRunner">Bling Runner</a></li>
 									<li><a class="scrolly" target="_blank" href="#TellMeWhatToEat">Tell Me What To Eat</a></li>
+									<li><a class="scrolly" target="_blank" href="#TreeTraversal">Tree Traversal</a></li>
+									<li><a class="scrolly" target="_blank" href="#BlingRunner">Bling Runner</a></li>
 								</ul>
 							</li>
 							<li>
 								<a href="#">Contact</a>
 								<ul>
 									<li><a target="_blank" href="https://github.com/ravisraval/">GitHub</a></li>
-									<li><a target="_blank" href="https://www.linkedin.com/in/ravi-raval-54a11553/">LinkedIn</a></li>
-									<li><a href="mailto:someone@example.com">raviraval@gmail.com</a></li>
+									<li><a target="_blank" href="https://www.linkedin.com/in/ravi-raval/">LinkedIn</a></li>
+									<li><a href="mailto:raviraval@gmail.com">raviraval@gmail.com</a></li>
 								</ul></li>
 							<li><a href="#skills" target="_blank" class="scrolly">Skills</a></li>
 							<li><a target="_blank" href="images/Ravi Raval Resume.pdf" class="button special">Resume</a></li>
@@ -55,75 +56,116 @@
 					<div class="content">
 						<header>
 							<h2>Ravi Raval</h2>
-							<h4>Full-stack Web Developer for <a href='https://www.girlzftw.com/'>Girlz, FTW</a></h4>
+							<h4>Lead Software Developer for <a href='https://www.girlzftw.com/'>Girlz, FTW</a></h4>
 							<p>Efficient, Driven, and Resourceful Problem Solver</p>
 						</header>
 						<span class="image"><img src="images/portrait2.jpg" alt="" /></span>
 					</div>
-					<a href="#RunAWay" class="goto-next scrolly">Next</a>
+					<a href="#TellMeWhatToEat" class="goto-next scrolly">Next</a>
 				</section>
 
-			<!-- One -->
-				<section id="RunAWay" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/runaway.gif" alt="" /></span>
+				<section id="TellMeWhatToEat" class="spotlight style1 bottom">
+					<span class="image fit main bottom"><img src="images/tellmewhattoeat.gif" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
 								<div class="4u 12u$(medium)">
 									<header>
-										<h2>RunAWay</h2>
-										<p>A full-stack web app built on Rails, Postgresql, and React/Redux.</p>
+										<h2>Tell Me What To Eat</h2>
+										<p>A full-stack web app built on Express, PostgreSQL, and React/Redux.</p>
 									</header>
 								</div>
 								<div class="4u 12u$(medium)">
-									<p>Runners and cyclists can create and save their own exercise routes and using the Google Maps API. Users can also log and view individual workouts.</p>
+									<p>Tired of pondering what to eat? This app suggests great restaurants near you and can help narrow down your search via a series of filtering questions.</p>
 								</div>
 								<!-- <div class="4u$ 12u$(medium)">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
-								</div> -->
+								<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
+								adipiscing adipiscing metus massa. Blandit orci porttitor semper.
+								Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
+								mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
+								ipsum dolor nullam.</p>
+							</div> -->
 							</div>
 							<ul class="actions">
-								<li><a href="http://www.runaway.today" target="_blank" class="button">Live</a></li>
+								<li><a href="https://github.com/ravisraval/TellMeWhatToEat" target="_blank" class="button">GitHub</a></li>
+								<li><a href="https://boiling-waters-62095.herokuapp.com/" target="_blank" class="button">Live</a></li>
 							</ul>
 						</div>
 					</div>
-					<a href="#BlingRunner" class="goto-next scrolly">Next</a>
+					<a href="#RunAWay" class="goto-next scrolly">Next</a>
 				</section>
 
-			<!-- Two -->
-				<section id="BlingRunner" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/blingrunner.gif" alt="" /></span>
+				<section id="RunAWay" class="spotlight style2 left">
+					<span class="image fit main"><img src="images/runaway.gif" alt="Gif of Route Creation" /></span>
 					<div class="content">
 						<header>
-							<h2>Bling Runner</h2>
-							<p>A JavaScript Browser Game</p>
+							<h2>RunAWay</h2>
+							<p>A full-stack web app built on Rails, PostgreSQL, and React/Redux.</p>
 						</header>
-						<p>Bling Runner crosses the rhythm music game genre with exciting (and increasingly difficult!) arcade-style driving physics.</p>
+						<p>Runners and cyclists can create and save their own exercise routes using the Google Maps API. Users can also log and view individual workouts.</p>
 						<ul class="actions">
-							<li><a href="https://ravisraval.github.io/BlingRunner/" target="_blank" class="button">Live</a></li>
+							<li><a href="https://github.com/ravisraval/RunAWay" target="_blank" class="button">GitHub</a></li>
+							<li><a href="http://www.runaway.today" target="_blank" class="button">Live</a></li>
 						</ul>
+						<a href="#TreeTraversal" class="goto-next scrolly">Next</a>
 					</div>
-					<a href="#TellMeWhatToEat" class="goto-next scrolly">Next</a>
 				</section>
 
-			<!-- Three -->
-				<section id="TellMeWhatToEat" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/tellmewhattoeat.gif" alt="" /></span>
+				<section id="TreeTraversal" class="spotlight style3 right">
+					<span class="image fit main bottom">
+						<img src="https://i.gyazo.com/22efb1a8b096fcab694d710b7d373abf.gif" alt="Gif of Tree Traversal" />
+					</span>
 					<div class="content">
 						<header>
-							<h2>Tell Me What To Eat</h2>
-							<p>A full-stack web app built on Express, PostgreSQL, and React/Redux.</p>
+							<h2>Tree Traversal</h2>
+							<p>An algorithm visualizer using D3 and React.</p>
 						</header>
-						<p>Tired of pondering what to eat? This app suggests great restaurants near you and can help narrow down your search via a series of filtering questions.</p>
+						<p>If a picture is worth a thousand words, how much is an animation? Tree Traversal allows users to easily visualize different binary tree traversals. Users can input and modify node values. </p>
 						<ul class="actions">
-							<li><a href="https://boiling-waters-62095.herokuapp.com/" target="_blank" class="button">Live</a></li>
+							<li><a href="https://github.com/ravisraval/teaching" target="_blank" class="button">GitHub</a></li>
+							<li><a href="https://teaching-algo.herokuapp.com/teaching/algos/tree_traversals" target="_blank" class="button">Live</a></li>
 						</ul>
+						<a href="#BlingRunner" class="goto-next scrolly">Next</a>
 					</div>
-					<a href="#skills" class="goto-next scrolly">Next</a>
+				</section>
+
+				<section id="BlingRunner" class="spotlight style1 bottom">
+					<span class="image fit main"><img src="images/blingrunner.gif" alt="Gameplay Gif" /></span>
+					<div class="content">
+						<div class="container">
+							<div class="row">
+								<div class="4u 12u$(medium)">
+									<header>
+										<h2>Bling Runner</h2>
+										<p>A JavaScript Browser Game</p>
+									</header>
+								</div>
+								<div class="4u 12u$(medium)">
+									<p>Bling Runner crosses the rhythm music game genre with exciting (and increasingly difficult!) arcade-style driving physics.</p>
+								</div>
+							</div>
+							<ul class="actions">
+								<li><a href="https://github.com/ravisraval/BlingRunner" target="_blank" class="button">GitHub</a></li>
+								<li><a href="https://ravisraval.github.io/BlingRunner/" target="_blank" class="button">Live</a></li>
+							</ul>
+						</div>
+						<a href="#Relax" class="goto-next scrolly">Next</a>
+					</div>
+				</section>
+
+				<section id="Relax" class="spotlight style2 left">
+					<span class="image fit main"><img src="https://i.gyazo.com/e9d1927c34349982b12a4db6f7be165e.gif" alt="Relax" /></span>
+					<div class="content">
+						<header>
+							<h2>Relax</h2>
+							<p>A Chrome Extension</p>
+						</header>
+						<p>Stress-related inflictions respond well to relaxation therapy, of which cognitive awareness is a key component. The Relax extension periodically opens a browser notification reminding the user to relax. Users can easily set the notification interval or opt to turn off notifications completely.</p>
+						<ul class="actions">
+							<li><a href="https://github.com/ravisraval/relax-chrome-extension" target="_blank" class="button">GitHub</a></li>
+						</ul>
+						<a href="#skills" class="goto-next scrolly">Next</a>
+					</div>
 				</section>
 
 			<!-- Four -->
@@ -142,7 +184,7 @@
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-server"></span>
-									<h3>JS / Node.js</h3>
+									<h3>ES6 JS</h3>
 									<!-- <p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p> -->
 								</section>
 								<section class="4u$ 6u(medium) 12u$(xsmall)">
@@ -162,16 +204,17 @@
 								</section>
 								<section class="4u$ 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-git"></span>
-									<h3>GitHub</h3>
+									<h3>Git</h3>
 									<!-- <p>Comfortable with solo and group git workflow.</p> -->
 								</section>
 							</div>
 						</div>
-						<!-- <footer class="major">
+
+						<footer class="major">
 							<ul class="actions">
-								<li><a href="images/Ravi Raval Resume.pdf" class="button">Resume</a></li>
+								<li><a href="images/Ravi Raval Resume.pdf" target="_blank" class="button">Resume</a></li>
 							</ul>
-						</footer> -->
+						</footer>
 					</div>
 				</section>
 
@@ -194,9 +237,9 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/ravi-raval-54a11553/" target="_blank" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.linkedin.com/in/ravi-raval/" target="_blank" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/ravisraval/" target="_blank" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="mailto:someone@example.com" target="_blank" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:raviraval@gmail.com" target="_blank" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>Ravi Raval</li>
