--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
 							<li>
 								<a href="#">Portfolio</a>
 								<ul>
-									<li><a class="scrolly" target="_blank" href="#RunAWay">RunAWay</a></li>
 									<li><a class="scrolly" target="_blank" href="#TellMeWhatToEat">Tell Me What To Eat</a></li>
+									<li><a class="scrolly" target="_blank" href="#RunAWay">RunAWay</a></li>
 									<li><a class="scrolly" target="_blank" href="#TreeTraversal">Tree Traversal</a></li>
 									<li><a class="scrolly" target="_blank" href="#BlingRunner">Bling Runner</a></li>
+									<li><a class="scrolly" target="_blank" href="#Relax">Relax</a></li>
 								</ul>
 							</li>
 							<li>
@@ -63,6 +64,17 @@
 					</div>
 					<a href="#TellMeWhatToEat" class="goto-next scrolly">Next</a>
 				</section>
+
+				<!-- <section id="story" class="wrapper style2 special fade">
+					<div class="container">
+						<header>
+							<h2>A long time ago, in a galaxy far, far, away...</h2>
+							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+						</header>
+						<div>
+
+					</div>
+				</section> -->
 
 				<section id="TellMeWhatToEat" class="spotlight style1 bottom">
 					<span class="image fit main bottom"><img src="images/tellmewhattoeat.gif" alt="" /></span>
@@ -219,20 +231,6 @@
 				</section>
 
 			<!-- Five -->
-				<!-- <section id="five" class="wrapper style2 special fade">
-					<div class="container">
-						<header>
-							<h2>Magna faucibus lorem diam</h2>
-							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
-						</header>
-						<form method="post" action="#" class="container 50%">
-							<div class="row uniform 50%">
-								<div class="8u 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
-								<div class="4u$ 12u$(xsmall)"><input type="submit" value="Get Started" class="fit special" /></div>
-							</div>
-						</form>
-					</div>
-				</section> -->
 
 			<!-- Footer -->
 				<footer id="footer">
